--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "postbuild": "node ./src/build/index.ts",
     "preview": "vite preview"
   },
   "repository": {
@@ -19,6 +20,12 @@
   },
   "homepage": "https://github.com/mathewjordan/dlas-to-iiif#readme",
   "dependencies": {
+    "iiif-builder": "^1.0.6",
+    "slugify": "^1.6.6",
     "vite": "^4.4.9"
+  },
+  "devDependencies": {
+    "@types/node": "^20.7.0",
+    "typescript": "^5.2.2"
   }
 }
